--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "chalk": "^2.1.0",
     "confabulous": "^1.5.3",
     "hogan.js": "^3.0.2",
+    "js-yaml": "^3.10.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
     "lodash.merge": "^4.6.0",
