--- a/package.json
+++ b/package.json
@@ -55,5 +55,13 @@
     "systemic": "^1.3.2",
     "systemic-domain-runner": "^1.1.0",
     "systemic-express": "^1.1.0"
-  }
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/tes/kube-hackday.git"
+  },
+  "bugs": {
+    "url": "https://github.com/tes/kube-hackday/issues"
+  },
+  "homepage": "https://github.com/tes/kube-hackday#readme"
 }
