--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -2,7 +2,7 @@
 apiVersion: voyager.appscode.com/v1beta1
 kind: Ingress
 metadata:
-  name: kubernaut-hello-world-ingress
+  name: kubernaut-ingress
   annotations:
     kubernetes.io/ingress.class: voyager
     ingress.appscode.com/type: LoadBalancer
@@ -10,17 +10,17 @@ metadata:
     ingress.appscode.com/stats: 'true'
 spec:
   backend:
-    serviceName: kubernaut-hello-world
+    serviceName: kubernaut
     servicePort: '80'
 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: kubernaut-hello-world
+  name: kubernaut
 spec:
   selector:
-    app: kubernaut-hello-world
+    app: kubernaut
   ports:
     - port: 80
       targetPort: web
@@ -30,22 +30,22 @@ spec:
 apiVersion: apps/v1beta1
 kind: Deployment
 metadata:
-  name: kubernaut-hello-world
+  name: kubernaut
   labels:
-    app: kubernaut-hello-world
+    app: kubernaut
 spec:
   replicas: 3
   selector:
     matchLabels:
-      app: kubernaut-hello-world
+      app: kubernaut
   template:
     metadata:
       labels:
-        app: kubernaut-hello-world
+        app: kubernaut
     spec:
       containers:
-      - name: kubernaut-hello-world
+      - name: kubernaut
         image: {{container}}
         ports:
-        - containerPort: 3000
+        - containerPort: 3001
           name: web
