--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "build-server": "rm -rf server/build && babel -d server/build ./server -s",
     "build-client": "true",
     "prepush": "docker build --tag quay.io/cressie176/kubernaut:local .",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "release": "release"
   },
   "author": "TES",
   "license": "UNLICENSED",
@@ -30,6 +31,7 @@
     "eslint-plugin-react": "^7.2.0",
     "husky": "^0.14.3",
     "jest": "^21.0.0-beta.1",
+    "kubernaut-cli": "^1.0.0-build.2",
     "nodemon": "^1.11.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
