--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
     "lru-cache": "^4.1.1",
+    "multer": "^1.3.0",
     "on-headers": "^1.0.1",
     "prepper": "^1.1.0",
     "ramda": "^0.24.1",
