--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "build-server": "rm -rf server/build && babel -d server/build ./server -s",
     "build-client": "true",
     "prepush": "docker build --tag quay.io/cressie176/kubernaut:local .",
-    "lint": "eslint .",
-    "release": "release"
+    "lint": "eslint ."
   },
   "author": "TES",
   "license": "UNLICENSED",
@@ -31,7 +30,6 @@
     "eslint-plugin-react": "^7.2.0",
     "husky": "^0.14.3",
     "jest": "^21.0.0-beta.1",
-    "kubernaut-cli": "^1.0.0-build.4",
     "nodemon": "^1.11.0",
     "request": "^2.81.0",
     "request-promise": "^4.2.1"
