--- a/server/test/routes/data/kubernetes.yaml
+++ b/server/test/routes/data/kubernetes.yaml
@@ -45,7 +45,7 @@ spec:
     spec:
       containers:
       - name: kubernaut-hello-world
-        image: {{IMAGE}}
+        image: {{image}}
         ports:
         - containerPort: 3000
           name: web
