--- a/package.json
+++ b/package.json
@@ -5,11 +5,12 @@
   "main": "server/build/index.js",
   "scripts": {
     "start": "concurrently 'npm run start-server' 'npm run start-client'",
-    "start-server": "nodemon server/index.js --exec babel-node --ignore client/",
+    "start-server": "npm run start-server-dependencies && nodemon server/index.js --exec babel-node --ignore client/",
     "start-client": "true",
+    "start-server-dependencies": "docker-compose up -d",
     "test": "npm run test-server && npm run test-client",
-    "test-server": "jest",
-    "test-server-w": "jest --watch",
+    "test-server": "APP_ENV=test jest",
+    "test-server-w": "APP_ENV=test jest --watch",
     "test-client": "true",
     "test-client-w": "true",
     "build": "concurrently 'npm run build-server' 'npm run build-client'",
@@ -24,6 +25,7 @@
     "babel-cli": "^6.24.1",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
+    "chance": "^1.0.11",
     "concurrently": "^3.5.0",
     "eslint": "^4.4.1",
     "eslint-config-imperative-es6": "^2.0.0",
@@ -40,6 +42,7 @@
     "bunyan": "^1.8.12",
     "chalk": "^2.1.0",
     "confabulous": "^1.5.3",
+    "groundhog-day": "^1.1.1",
     "hogan.js": "^3.0.2",
     "js-yaml": "^3.10.0",
     "lodash.get": "^4.4.2",
@@ -48,6 +51,8 @@
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
     "lru-cache": "^4.1.1",
+    "marv": "^1.5.2",
+    "marv-pg-driver": "^1.4.0",
     "multer": "^1.3.0",
     "on-headers": "^1.0.1",
     "prepper": "^1.1.0",
@@ -55,7 +60,9 @@
     "safe-json-parse": "^4.0.0",
     "systemic": "^1.3.2",
     "systemic-domain-runner": "^1.1.0",
-    "systemic-express": "^1.1.0"
+    "systemic-express": "^1.1.0",
+    "systemic-pg": "^1.2.0",
+    "uuid": "^3.1.0"
   },
   "repository": {
     "type": "git",
