--- a/kubernetes.yaml
+++ b/kubernetes.yaml
@@ -45,7 +45,7 @@ spec:
     spec:
       containers:
       - name: kubernaut
-        image: {{IMAGE}}
+        image: {{image}}
         ports:
         - containerPort: 3001
           name: web
