Extract service and template to descrete entities

--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
     "start-client": "true",
     "start-server-dependencies": "docker-compose up -d local-dependencies",
     "test": "npm run test-server && npm run test-client",
-    "test-server": "APP_ENV=test jest",
     "test-server-w": "APP_ENV=test jest --watch",
+    "test-server": "APP_ENV=test jest",
+    "test-server-i": "APP_ENV=test jest -i",
     "test-client": "true",
     "test-client-w": "true",
     "build": "concurrently 'npm run build-server' 'npm run build-client'",
@@ -43,6 +44,7 @@
     "chalk": "^2.1.0",
     "confabulous": "^1.5.3",
     "groundhog-day": "^1.1.1",
+    "highwayhash": "^2.2.0",
     "hogan.js": "^3.0.2",
     "js-yaml": "^3.10.0",
     "lodash.get": "^4.4.2",
