Add profile api

--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "start-client": "true",
     "start-server-dependencies": "docker-compose up -d local-dependencies",
     "test": "npm run test-server && npm run test-client",
-    "test-server-w": "APP_ENV=test jest --watch",
-    "test-server": "APP_ENV=test jest",
-    "test-server-i": "APP_ENV=test jest -i",
+    "test-server-w": "APP_ENV=test jest --runInBand --watch",
+    "test-server": "APP_ENV=test jest --runInBand",
+    "test-server-i": "APP_ENV=test jest --runInBand",
     "test-client": "true",
     "test-client-w": "true",
     "build": "concurrently 'npm run build-server' 'npm run build-client'",
