--- a/client/package.json
+++ b/client/package.json
@@ -2,15 +2,42 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "license": "UNLICENSED",
+  "proxy": "http://localhost:3001/",
   "dependencies": {
+    "bootstrap": "^3.3.7",
+    "enzyme-adapter-react-16": "^1.0.2",
+    "font-awesome": "^4.7.0",
+    "install": "^0.10.1",
+    "jquery": "^3.2.1",
+    "node-sass-chokidar": "0.0.3",
     "react": "^16.0.0",
+    "react-bootstrap": "^0.31.5",
     "react-dom": "^16.0.0",
-    "react-scripts": "1.0.14"
+    "react-redux": "^5.0.6",
+    "react-router-dom": "^4.2.2",
+    "react-scripts": "1.0.14",
+    "redux": "^3.7.2",
+    "redux-devtools-extension": "^2.13.2",
+    "redux-thunk": "^2.2.0",
+    "timeago.js": "^3.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "test": "react-scripts test --env=jsdom",
+    "test": "CI=true react-scripts test --env=jsdom",
+    "test-w": "react-scripts test --env=jsdom",
+    "postbuild": "postcss --use postcss-custom-properties --replace build/**/*.css",
     "eject": "react-scripts eject"
+  },
+  "devDependencies": {
+    "enzyme": "^3.1.0",
+    "fetch-mock": "^5.13.1",
+    "jest-cli": "^21.2.1",
+    "mock-store": "0.0.1",
+    "postcss-cli": "^4.1.1",
+    "postcss-custom-properties": "^6.2.0",
+    "ramda": "^0.25.0",
+    "redux-mock-store": "^1.3.0"
   }
 }
