--- a/package.json
+++ b/package.json
@@ -6,18 +6,19 @@
   "scripts": {
     "start": "concurrently 'npm run start-server' 'npm run start-client'",
     "start-server": "npm run start-server-dependencies && nodemon server/index.js --exec babel-node --ignore client/",
-    "start-client": "true",
+    "start-client": "cd client; npm start",
     "start-server-dependencies": "docker-compose up -d local-dependencies",
     "test": "npm run test-server && npm run test-client",
-    "test-server-w": "APP_ENV=test jest --runInBand --watch",
-    "test-server": "APP_ENV=test jest --runInBand",
+    "test-server-w": "APP_ENV=test jest --watch",
+    "test-server": "APP_ENV=test jest",
     "test-server-i": "APP_ENV=test jest --runInBand",
-    "test-client": "true",
-    "test-client-w": "true",
+    "test-client": "cd client; npm test",
+    "test-client-w": "cd client; npm run test-w",
+    "test-client-i": "cd client; npm run test-i",
     "load-test-data": "babel-node ./server/test/bin/load-test-data.js",
     "build": "concurrently 'npm run build-server' 'npm run build-client'",
     "build-server": "rm -rf server/build && babel --out-dir server/build ./server --source-maps --copy-files",
-    "build-client": "true",
+    "build-client": "cd client; npm run build",
     "prepush": "IMAGE=kubernaut TAG=local docker-compose run --entrypoint npm build-kubernaut run test-server -- --ci --bail --no-colors --verbose",
     "lint": "eslint ."
   },
@@ -61,6 +62,7 @@
     "on-headers": "^1.0.1",
     "prepper": "^1.1.0",
     "ramda": "^0.24.1",
+    "react-router-bootstrap": "^0.24.4",
     "safe-json-parse": "^4.0.0",
     "systemic": "^1.3.2",
     "systemic-domain-runner": "^1.1.0",
