--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "chance": "^1.0.11",
+    "cheerio": "^1.0.0-rc.2",
     "concurrently": "^3.5.0",
     "eslint": "^4.4.1",
     "eslint-config-imperative-es6": "^2.0.0",
@@ -62,7 +63,6 @@
     "on-headers": "^1.0.1",
     "prepper": "^1.1.0",
     "ramda": "^0.24.1",
-    "react-router-bootstrap": "^0.24.4",
     "safe-json-parse": "^4.0.0",
     "systemic": "^1.3.2",
     "systemic-domain-runner": "^1.1.0",
