--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "marv-pg-driver": "^2.0.0",
     "multer": "^1.3.0",
     "on-headers": "^1.0.1",
+    "power-merge": "^1.0.3",
     "prepper": "^1.1.0",
     "ramda": "^0.24.1",
     "safe-json-parse": "^4.0.0",
