--- a/package.json
+++ b/package.json
@@ -42,11 +42,14 @@
     "request-promise": "^4.2.1"
   },
   "dependencies": {
+    "async": "^2.6.0",
     "body-parser": "^1.17.2",
     "boom": "^5.2.0",
     "bunyan": "^1.8.12",
     "chalk": "^2.1.0",
     "confabulous": "^1.5.3",
+    "connect-pg-simple": "^4.2.1",
+    "express-session": "^1.15.6",
     "groundhog-day": "^1.1.1",
     "highwayhash": "^2.2.0",
     "hogan.js": "^3.0.2",
@@ -61,13 +64,16 @@
     "marv-pg-driver": "^2.0.0",
     "multer": "^1.3.0",
     "on-headers": "^1.0.1",
+    "passport": "^0.4.0",
+    "passport-custom": "^1.0.5",
+    "passport-github": "^1.1.0",
     "power-merge": "^1.0.3",
     "prepper": "^1.1.0",
     "ramda": "^0.24.1",
     "safe-json-parse": "^4.0.0",
     "systemic": "^1.3.2",
     "systemic-domain-runner": "^1.1.0",
-    "systemic-express": "^1.1.0",
+    "systemic-express": "^1.1.1",
     "systemic-pg": "^1.2.0",
     "uuid": "^3.1.0"
   },
