--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "passport": "^0.4.0",
     "passport-custom": "^1.0.5",
     "passport-github": "^1.1.0",
+    "passport-http-bearer": "^1.0.1",
     "power-merge": "^1.0.3",
     "prepper": "^1.1.0",
     "ramda": "^0.24.1",
