Support concurrent db tests

--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "start-client": "cd client; npm start",
     "start-server-dependencies": "docker-compose up -d local-dependencies",
     "test": "npm run test-server && npm run test-client",
-    "test-server-w": "APP_ENV=test jest --runInBand --watch",
-    "test-server": "APP_ENV=test jest --runInBand",
+    "test-server-w": "APP_ENV=test jest --watch",
+    "test-server": "APP_ENV=test jest",
     "test-server-i": "APP_ENV=test jest --runInBand",
     "test-client": "cd client; npm test",
     "test-client-w": "cd client; npm run test-w",
