--- a/package.json
+++ b/package.json
@@ -56,6 +56,7 @@
     "js-yaml": "^3.10.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
+    "lodash.intersection": "^4.4.0",
     "lodash.merge": "^4.6.0",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
