--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lodash.merge": "^4.6.0",
     "lodash.omit": "^4.5.0",
     "lodash.pick": "^4.4.0",
+    "lodash.uniq": "^4.5.0",
     "lru-cache": "^4.1.1",
     "marv": "^2.0.0",
     "marv-pg-driver": "^2.0.0",
