--- a/package.json
+++ b/package.json
@@ -77,6 +77,8 @@
     "prepper": "^1.1.0",
     "ramda": "^0.24.1",
     "safe-json-parse": "^4.0.0",
+    "sqb": "^1.0.1-alpha.6",
+    "sqb-serializer-pg": "^0.2.0",
     "systemic": "^1.3.2",
     "systemic-domain-runner": "^1.1.0",
     "systemic-express": "^1.1.1",
