Use deployment attributes when rendering manifest

--- a/server/test/factories/data/kubernetes.yaml
+++ b/server/test/factories/data/kubernetes.yaml
@@ -35,7 +35,7 @@ metadata:
     app: "{{service}}"
     version: "{{version}}"
 spec:
-  replicas: 3
+  replicas: {{replicas}}
   selector:
     matchLabels:
       app: "{{service}}"
