Use mocha for testing on the server side

--- a/package.json
+++ b/package.json
@@ -15,9 +15,8 @@
     "start-client": "cd client; npm start",
     "start-server-dependencies": "docker-compose up -d local-dependencies",
     "test": "npm run test-server && npm run test-client",
-    "test-server": "APP_ENV=test jest --runInBand",
-    "test-server-w": "APP_ENV=test jest --watch",
-    "test-server-i": "APP_ENV=test jest --runInBand",
+    "test-server": "mocha --opts server/test/mocha.opts server/test/**/*.test.js",
+    "test-server-w": "mocha --watch --opts server/test/mocha.opts server/test/**/*.test.js",
     "test-client": "cd client; npm test",
     "test-client-w": "cd client; npm run test-w",
     "test-client-i": "cd client; npm run test-i",
@@ -47,8 +46,10 @@
     "eslint": "^4.4.1",
     "eslint-config-imperative-es6": "^2.0.0",
     "eslint-plugin-react": "^7.2.0",
+    "expect": "^22.4.3",
     "husky": "^0.14.3",
     "jest": "^21.0.0-beta.1",
+    "mocha": "^5.1.1",
     "nodemon": "^1.11.0",
     "p-limit": "^1.1.0",
     "request": "^2.81.0",
