--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
   "license": "UNLICENSED",
   "devDependencies": {
     "babel-cli": "^6.24.1",
+    "babel-plugin-stack-trace-sourcemap": "^1.0.2",
     "babel-preset-env": "^1.6.0",
     "babel-preset-stage-3": "^6.24.1",
     "chance": "^1.0.11",
@@ -52,7 +53,8 @@
     "nodemon": "^1.11.0",
     "p-limit": "^1.1.0",
     "request": "^2.81.0",
-    "request-promise": "^4.2.1"
+    "request-promise": "^4.2.1",
+    "source-map-support": "^0.5.5"
   },
   "dependencies": {
     "async": "^2.6.0",
