--- a/package.json
+++ b/package.json
@@ -39,7 +39,8 @@
   "devDependencies": {
     "babel-cli": "^6.24.1",
     "babel-plugin-stack-trace-sourcemap": "^1.0.2",
-    "babel-preset-env": "^1.6.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
     "babel-preset-stage-3": "^6.24.1",
     "chance": "^1.0.11",
     "cheerio": "^1.0.0-rc.2",
