--- a/client/package.json
+++ b/client/package.json
@@ -12,7 +12,7 @@
     }
   },
   "dependencies": {
-    "bootstrap": "^3.3.7",
+    "bootstrap": "^4.1.1",
     "connected-react-router": "^4.3.0",
     "enzyme-adapter-react-16": "^1.0.2",
     "font-awesome": "^4.7.0",
@@ -20,14 +20,15 @@
     "install": "^0.10.1",
     "jquery": "^3.2.1",
     "node-sass-chokidar": "0.0.3",
+    "popper.js": "^1.14.3",
     "query-string": "^5.1.1",
     "react": "^16.0.0",
-    "react-bootstrap": "^0.32.0",
     "react-dom": "^16.0.0",
     "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
     "react-scripts": "1.0.14",
+    "reactstrap": "^6.1.0",
     "redux": "^3.7.2",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
