--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "history": "^4.7.2",
     "install": "^0.10.1",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.10",
     "node-sass-chokidar": "0.0.3",
     "popper.js": "^1.14.3",
     "query-string": "^5.1.1",
