--- a/package.json
+++ b/package.json
@@ -92,8 +92,8 @@
     "prepper": "^1.1.0",
     "ramda": "^0.24.1",
     "safe-json-parse": "^4.0.0",
-    "sqb": "^1.0.1-alpha.6",
-    "sqb-serializer-pg": "^0.2.0",
+    "sqb": "^2.0.3",
+    "sqb-serializer-pg": "^0.4.1",
     "systemic": "^3.0.0",
     "systemic-domain-runner": "^1.1.0",
     "systemic-express": "^1.1.1",
