--- a/package.json
+++ b/package.json
@@ -71,6 +71,8 @@
     "groundhog-day": "^1.1.1",
     "highwayhash": "^2.2.0",
     "hogan.js": "^3.0.2",
+    "is-css-color-hex": "^0.2.0",
+    "is-css-color-name": "^0.1.3",
     "js-yaml": "^3.10.0",
     "lodash.get": "^4.4.2",
     "lodash.has": "^4.5.2",
