--- a/client/package.json
+++ b/client/package.json
@@ -31,6 +31,7 @@
     "react-scripts": "1.0.14",
     "reactstrap": "^6.1.0",
     "redux": "^3.7.2",
+    "redux-actions": "^2.4.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
     "redux-thunk": "^2.2.0",
