--- a/client/package.json
+++ b/client/package.json
@@ -34,6 +34,7 @@
     "redux-actions": "^2.4.0",
     "redux-devtools-extension": "^2.13.2",
     "redux-form": "^7.3.0",
+    "redux-form-saga": "^0.2.0",
     "redux-saga": "^0.16.0",
     "redux-thunk": "^2.2.0",
     "timeago.js": "^3.0.2"
