Fix failure to deserialize

--- a/client/package.json
+++ b/client/package.json
@@ -9,6 +9,9 @@
     },
     "/auth/github": {
       "target": "http://localhost:3001/"
+    },
+    "/login": {
+      "target": "http://localhost:3001/"
     }
   },
   "dependencies": {
