--- a/client/package.json
+++ b/client/package.json
@@ -28,6 +28,7 @@
     "query-string": "^5.1.1",
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
+    "react-markdown": "^4.0.3",
     "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
