upgrade to babel7. Less server transpiling now

--- a/package.json
+++ b/package.json
@@ -38,11 +38,12 @@
   "author": "TES",
   "license": "UNLICENSED",
   "devDependencies": {
-    "babel-cli": "^6.24.1",
-    "babel-plugin-stack-trace-sourcemap": "^1.0.2",
-    "babel-polyfill": "^6.26.0",
-    "babel-preset-env": "^1.7.0",
-    "babel-preset-stage-3": "^6.24.1",
+    "@babel/cli": "^7.1.5",
+    "@babel/core": "^7.1.5",
+    "@babel/node": "^7.0.0",
+    "@babel/polyfill": "^7.0.0",
+    "@babel/preset-env": "^7.1.5",
+    "@babel/register": "^7.0.0",
     "chance": "^1.0.11",
     "cheerio": "^1.0.0-rc.2",
     "concurrently": "^3.5.0",
