--- a/.babelrc
+++ b/.babelrc
@@ -1,20 +1,12 @@
 {
   "presets": [
     [
-      "env", {
+      "@babel/env", {
+        useBuiltIns: 'entry',
         "targets": {
           "node": "current",
-          "plugins": [
-            ["babel-plugin-stack-trace-sourcemap", {
-                "importOverride": ["source-map-support", "install", "_sourceMapSupport"],
-                "execute": true
-            }]
-          ]
         }
       }
-    ],
-    [
-      "stage-3"
     ]
   ]
 }
