--- a/.eslintrc
+++ b/.eslintrc
@@ -4,10 +4,9 @@
     "react"
   ],
   "parserOptions": {
-    "ecmaVersion": 2017,
+    "ecmaVersion": 2018,
     "ecmaFeatures": {
-       "jsx": true,
-       "experimentalObjectRestSpread": true,
+       "jsx": true
     }
   },
   "env": {
