--- a/client/package.json
+++ b/client/package.json
@@ -3,23 +3,14 @@
   "version": "0.1.0",
   "private": true,
   "license": "UNLICENSED",
-  "proxy": {
-    "/api": {
-      "target": "http://localhost:3001/"
-    },
-    "/auth/github": {
-      "target": "http://localhost:3001/"
-    },
-    "/login": {
-      "target": "http://localhost:3001/"
-    }
-  },
+  
   "dependencies": {
     "bootstrap": "^4.1.1",
     "connected-react-router": "^5.0.1",
     "enzyme-adapter-react-16": "^1.0.2",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
+    "http-proxy-middleware": "^0.19.0",
     "install": "^0.10.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.10",
@@ -33,7 +24,7 @@
     "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "1.0.14",
+    "react-scripts": "2.1.1",
     "reactstrap": "^6.1.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.4.0",
@@ -59,5 +50,11 @@
     "postcss-custom-properties": "^6.2.0",
     "ramda": "^0.25.0",
     "redux-mock-store": "^1.3.0"
-  }
+  },
+  "browserslist": [
+    ">0.2%",
+    "not dead",
+    "not ie <= 11",
+    "not op_mini all"
+  ]
 }
