Test everything on pre-push why not

--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "build-server": "rm -rf server/build && babel --out-dir server/build ./server --source-maps --copy-files --include-dotfiles",
     "build-client": "cd client; npm run build",
     "precommit": "npm run lint && npm run check-package-lock",
-    "prepush": "IMAGE=kubernaut TAG=$(git rev-parse --short HEAD)-local docker-compose build build-kubernaut; IMAGE=kubernaut TAG=$(git rev-parse --short HEAD)-local docker-compose run --rm --entrypoint npm build-kubernaut run test-server -- --ci --bail --no-colors --verbose",
+    "prepush": "IMAGE=kubernaut TAG=$(git rev-parse --short HEAD)-local docker-compose build build-kubernaut; IMAGE=kubernaut TAG=$(git rev-parse --short HEAD)-local docker-compose run --rm --entrypoint npm build-kubernaut run test -- --ci --bail --no-colors --verbose",
     "lint": "eslint .",
     "check-package-lock": "grep -qc tescloud package-lock.json; test $? -gt 0",
     "create-key": "create-key",
