--- a/client/package.json
+++ b/client/package.json
@@ -13,6 +13,7 @@
     "install": "^0.10.1",
     "jquery": "^3.2.1",
     "lodash": "^4.17.10",
+    "node-sass": "^4.11.0",
     "popper.js": "^1.14.3",
     "query-string": "^5.1.1",
     "react": "^16.0.0",
@@ -22,7 +23,7 @@
     "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "2.1.1",
+    "react-scripts": "^2.1.2",
     "reactstrap": "^6.1.0",
     "redux": "^3.7.2",
     "redux-actions": "^2.4.0",
