--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "react": "^16.0.0",
     "react-dom": "^16.0.0",
     "react-helmet": "^5.2.0",
+    "react-json-editor-ajrm": "^2.5.9",
     "react-markdown": "^4.0.3",
     "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
