--- a/client/package.json
+++ b/client/package.json
@@ -5,6 +5,7 @@
   "license": "UNLICENSED",
   "dependencies": {
     "bootstrap": "^4.1.1",
+    "brace": "^0.11.1",
     "connected-react-router": "^5.0.1",
     "enzyme-adapter-react-16": "^1.0.2",
     "font-awesome": "^4.7.0",
@@ -17,9 +18,9 @@
     "popper.js": "^1.14.3",
     "query-string": "^5.1.1",
     "react": "^16.0.0",
+    "react-ace": "^6.4.0",
     "react-dom": "^16.0.0",
     "react-helmet": "^5.2.0",
-    "react-json-editor-ajrm": "^2.5.9",
     "react-markdown": "^4.0.3",
     "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
@@ -28,7 +29,7 @@
     "reactstrap": "^7.0.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.4.0",
-    "redux-form": "^7.4.2",
+    "redux-form": "^8.1.0",
     "redux-form-saga": "^0.2.0",
     "redux-saga": "^1.0.0",
     "timeago.js": "^3.0.2"
