--- a/package.json
+++ b/package.json
@@ -99,7 +99,7 @@
     "sqb": "^3.4.0",
     "sqb-serializer-pg": "^3.1.1",
     "systemic": "^3.0.0",
-    "systemic-domain-runner": "^1.1.0",
+    "systemic-service-runner": "^1.1.0",
     "systemic-express": "^1.1.1",
     "systemic-pg": "^2.0.0",
     "uuid": "^3.1.0"
