--- a/client/package.json
+++ b/client/package.json
@@ -25,7 +25,7 @@
     "react-redux": "^5.0.6",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "^2.1.3",
+    "react-scripts": "^3.0.1",
     "reactstrap": "^7.0.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.4.0",
@@ -45,17 +45,23 @@
   "devDependencies": {
     "enzyme": "^3.1.0",
     "fetch-mock": "^5.13.1",
-    "jest-cli": "^21.2.1",
+    "jest-cli": "^24.8.0",
     "mock-store": "0.0.1",
-    "postcss-cli": "^4.1.1",
+    "postcss-cli": "^6.1.2",
     "postcss-custom-properties": "^6.2.0",
     "ramda": "^0.25.0",
     "redux-mock-store": "^1.3.0"
   },
-  "browserslist": [
-    ">0.2%",
-    "not dead",
-    "not ie <= 11",
-    "not op_mini all"
-  ]
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
+  }
 }
