--- a/package.json
+++ b/package.json
@@ -47,7 +47,7 @@
     "chance": "^1.0.11",
     "cheerio": "^1.0.0-rc.2",
     "concurrently": "^3.5.0",
-    "eslint": "5.6.0",
+    "eslint": "^5.16.0",
     "eslint-config-imperative-es6": "^2.0.0",
     "eslint-plugin-react": "^7.2.0",
     "expect": "^22.4.3",
