--- a/package.json
+++ b/package.json
@@ -47,9 +47,10 @@
     "chance": "^1.0.11",
     "cheerio": "^1.0.0-rc.2",
     "concurrently": "^3.5.0",
-    "eslint": "^5.16.0",
+    "eslint": "^6.5.1",
     "eslint-config-imperative-es6": "^2.0.0",
     "eslint-plugin-react": "^7.2.0",
+    "eslint-plugin-react-hooks": "^2.1.2",
     "expect": "^24.8.0",
     "husky": "^0.14.3",
     "mocha": "^5.1.1",
