--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "source-map-support": "^0.5.5"
   },
   "dependencies": {
+    "@kubernetes/client-node": "^0.11.1",
     "async": "^2.6.0",
     "aws-sdk": "^2.450.0",
     "body-parser": "^1.17.2",
