Cleanup npm run targets

--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "start": "concurrently 'npm run start-server' 'npm run start-client'",
     "start-server": "npm run setup-local; nodemon server/index.js --exec babel-node --ignore client/",
     "start-client": "cd client; npm start",
-    "start-server-dependencies": "docker-compose up -d local-dependencies",
     "test": "npm run test-server && npm run test-client",
     "test-server": "mocha --opts server/test/mocha.opts server/test/**/*.test.js",
     "test-server-w": "mocha --watch --opts server/test/mocha.opts server/test/**/*.test.js",
@@ -25,13 +24,10 @@
     "build-server": "rm -rf server/build && babel --out-dir server/build ./server --source-maps --copy-files --include-dotfiles",
     "build-client": "cd client; npm run build",
     "precommit": "npm run lint && npm run check-package-lock",
-    "prepush": "IMAGE=kubernaut TAG=$(git rev-parse --short HEAD)-local docker-compose build build-kubernaut; IMAGE=kubernaut TAG=$(git rev-parse --short HEAD)-local docker-compose run --rm --entrypoint npm build-kubernaut run test -- --ci --bail --no-colors --verbose",
+    "prepush": "npm test",
     "lint": "eslint .",
     "check-package-lock": "grep -qc tescloud package-lock.json; test $? -gt 0",
     "create-key": "create-key",
-    "kube-release": "release",
-    "kube-deploy": "deploy",
-    "kube-status": "status",
     "create-bearer-token": "./bin/create-bearer-token.js",
     "setup-local": "babel-node ./bin/setup-local.js",
     "install-client": "cd client; npm ci"
