--- a/client/package.json
+++ b/client/package.json
@@ -16,6 +16,7 @@
     "install": "^0.10.1",
     "jquery": "^3.4.1",
     "lodash": "^4.17.15",
+    "nanoid": "^3.1.10",
     "node-sass": "^4.12.0",
     "popper.js": "^1.14.3",
     "query-string": "^5.1.1",
