--- a/package.json
+++ b/package.json
@@ -87,6 +87,7 @@
     "marv": "^2.0.0",
     "marv-pg-driver": "^2.0.0",
     "multer": "^1.3.0",
+    "nanoid": "^3.1.10",
     "on-headers": "^1.0.1",
     "passport": "^0.4.0",
     "passport-custom": "^1.0.5",
