--- a/server/test/factories/data/kubernetes.yaml
+++ b/server/test/factories/data/kubernetes.yaml
@@ -46,17 +46,17 @@ spec:
         livenessProbe:
           httpGet:
             port: http
-            path: /status
+            path: {{probe}}
           timeoutSeconds: 1
           initialDelaySeconds: 30
           failureThreshold: 4
         readinessProbe:
           httpGet:
             port: http
-            path: /status
+            path: {{probe}}
           timeoutSeconds: 1
           initialDelaySeconds: 5
           failureThreshold: 2
         ports:
         - name: http
-          containerPort: 3000
+          containerPort: {{port}}
