--- a/package.json
+++ b/package.json
@@ -61,6 +61,7 @@
     "@kubernetes/client-node": "^0.12.0",
     "async": "^2.6.0",
     "aws-sdk": "^2.450.0",
+    "bluebird": "^3.7.2",
     "body-parser": "^1.17.2",
     "boom": "^5.2.0",
     "bunyan": "^1.8.12",
