--- a/package.json
+++ b/package.json
@@ -1,14 +1,8 @@
 {
   "name": "kubernaut",
   "version": "1.0.0",
-  "description": "Manages kubernetes deployments",
+  "description": "Interface between humans and k8s clusters in the ways we wish to work.",
   "main": "server/build/index.js",
-  "config": {
-    "kubernaut": {
-      "registry": "payments",
-      "containerPort": 3001
-    }
-  },
   "scripts": {
     "start": "concurrently 'npm run start-server' 'npm run start-client'",
     "start-server": "npm run setup-local; nodemon server/index.js --exec babel-node --ignore client/",
@@ -108,10 +102,10 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/tes/kube-hackday.git"
+    "url": "git+https://github.com/tes/kubernaut.git"
   },
   "bugs": {
-    "url": "https://github.com/tes/kube-hackday/issues"
+    "url": "https://github.com/tes/kubernaut/issues"
   },
-  "homepage": "https://github.com/tes/kube-hackday#readme"
+  "homepage": "https://github.com/tes/kubernaut#readme"
 }
