--- a/package.json
+++ b/package.json
@@ -63,7 +63,7 @@
     "confabulous": "^1.5.3",
     "connect-pg-simple": "^6.2.1",
     "cryptus": "^1.2.0",
-    "elastic-apm-node": "^3.7.0",
+    "elastic-apm-node": "glasseyes42/apm-agent-nodejs#master",
     "express-session": "^1.15.6",
     "groundhog-day": "^1.1.1",
     "highwayhash": "^2.5.0",
