--- a/package.json
+++ b/package.json
@@ -8,8 +8,8 @@
     "start-server": "npm run setup-local; nodemon server/index.js --exec babel-node --ignore client/",
     "start-client": "cd client; npm start",
     "test": "npm run test-server && npm run test-client",
-    "test-server": "mocha --opts server/test/mocha.opts server/test/**/*.test.js",
-    "test-server-w": "mocha --watch --opts server/test/mocha.opts server/test/**/*.test.js",
+    "test-server": "mocha server/test/**/*.test.js",
+    "test-server-w": "mocha --watch server/test/**/*.test.js",
     "test-client": "cd client; npm test",
     "test-client-w": "cd client; npm run test-w",
     "test-client-i": "cd client; npm run test-i",
@@ -44,7 +44,7 @@
     "eslint-plugin-react-hooks": "^2.1.2",
     "expect": "^24.8.0",
     "husky": "^0.14.3",
-    "mocha": "^5.1.1",
+    "mocha": "^8.2.1",
     "nodemon": "^2.0.6",
     "p-limit": "^1.1.0",
     "request": "^2.81.0",
