--- a/package.json
+++ b/package.json
@@ -62,6 +62,7 @@
     "chalk": "^2.1.0",
     "confabulous": "^1.5.3",
     "connect-pg-simple": "^6.2.1",
+    "core-js": "^3.8.2",
     "cryptus": "^1.2.0",
     "elastic-apm-node": "^3.8.0",
     "express-session": "^1.15.6",
