--- a/package.json
+++ b/package.json
@@ -72,10 +72,7 @@
     "is-css-color-hex": "^0.2.0",
     "is-css-color-name": "^0.1.3",
     "js-yaml": "^3.13.1",
-    "lodash.get": "^4.4.2",
-    "lodash.has": "^4.5.2",
-    "lodash.merge": "^4.6.2",
-    "lodash.pick": "^4.4.0",
+    "lodash": "^4.17.20",
     "marv": "^2.0.0",
     "marv-pg-driver": "^4.0.0",
     "multer": "^1.3.0",
@@ -87,7 +84,6 @@
     "passport-http-bearer": "^1.0.1",
     "power-merge": "^1.0.3",
     "prepper": "^1.1.0",
-    "ramda": "^0.24.1",
     "short-hash": "^1.0.0",
     "sqb": "^3.9.2",
     "sqb-serializer-pg": "^3.1.1",
