--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,7 @@
     "react-redux": "^6.0.1",
     "react-router-bootstrap": "^0.24.4",
     "react-router-dom": "^4.2.2",
-    "react-scripts": "3.4.1",
+    "react-scripts": "^4.0.1",
     "reactstrap": "^7.0.2",
     "redux": "^3.7.2",
     "redux-actions": "^2.4.0",
