--- a/client/package.json
+++ b/client/package.json
@@ -4,21 +4,22 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
-    "bootstrap": "^4.3.1",
+    "bootstrap": "^4.5.3",
     "brace": "^0.11.1",
     "connected-react-router": "^6.5.2",
-    "cron-validator": "^1.1.1",
-    "cronstrue": "^1.92.0",
-    "enzyme-adapter-react-16": "^1.0.2",
+    "cron-validator": "^1.2.0",
+    "cronstrue": "^1.106.0",
+    "enzyme-adapter-react-16": "^1.15.5",
     "font-awesome": "^4.7.0",
     "history": "^4.7.2",
-    "http-proxy-middleware": "^0.19.0",
-    "install": "^0.10.1",
-    "jquery": "^3.4.1",
-    "lodash": "^4.17.15",
-    "nanoid": "^3.1.10",
+    "http-proxy-middleware": "^1.0.6",
+    "install": "^0.13.0",
+    "jquery": "^3.5.1",
+    "lodash": "^4.17.20",
+    "nanoid": "^3.1.20",
     "node-sass": "^4.14.1",
-    "popper.js": "^1.14.3",
+    "popper.js": "^1.16.1",
+    "postcss": "^8.2.2",
     "query-string": "^5.1.1",
     "react": "^16.0.0",
     "react-ace": "^6.4.0",
@@ -35,7 +36,7 @@
     "redux-form": "^8.3.6",
     "redux-form-saga": "^0.2.0",
     "redux-saga": "^1.0.0",
-    "timeago.js": "^3.0.2"
+    "timeago.js": "^4.0.2"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -46,12 +47,12 @@
     "eject": "react-scripts eject"
   },
   "devDependencies": {
-    "enzyme": "^3.1.0",
-    "fetch-mock": "^5.13.1",
-    "jest-cli": "^24.8.0",
+    "enzyme": "^3.11.0",
+    "fetch-mock": "^9.11.0",
+    "jest-cli": "^26.6.3",
     "mock-store": "0.0.1",
-    "postcss-cli": "^6.1.2",
-    "postcss-custom-properties": "^6.2.0",
+    "postcss-cli": "^8.3.1",
+    "postcss-custom-properties": "^10.0.0",
     "redux-mock-store": "^1.3.0"
   },
   "browserslist": {
