--- a/client/package.json
+++ b/client/package.json
@@ -4,8 +4,8 @@
   "private": true,
   "license": "UNLICENSED",
   "dependencies": {
+    "ace-builds": "^1.4.12",
     "bootstrap": "^4.5.3",
-    "brace": "^0.11.1",
     "connected-react-router": "^6.8.0",
     "cron-validator": "^1.2.0",
     "cronstrue": "^1.106.0",
